CORS update; UI changes; logo added

--- a/views/home.html
+++ b/views/home.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
     <link href="../public/css/home.css" rel="stylesheet">
     
-    <link rel="icon" type="image/x-icon" src="..public/image/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../public/images/favicon.ico">
     <title>ExpendEase</title>
     
 </head>
@@ -21,8 +21,8 @@
                 <div class="featured-image mb-3">
                     <img src="../public/image/display-login.png" alt="" class="image-fluid ps-5 pe-5 side-image">
                 </div>
-                <p class="text-white fs-2 fw-5">ExpendEase</p>
-                <small class="text-wrap text-center pb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, cum.</small>
+                <p class="text-white fs-2 fw-5 d-flex justify-content-center "><img class="w-75 applogo" src="../public/images/AppLogo-removebg.png"></p>
+                <small class="text-wrap text-center pb-2">Financial Freedom Starts Here — Track Every Penny with Ease.</small>
             </div>
             <!-- right box -->
             <div class="col-md-6 right-box">
