--- a/views/reset-password.html
+++ b/views/reset-password.html
@@ -35,7 +35,7 @@
         const newPassword = document.getElementById("password");
         passwordResetForm.addEventListener('submit',passwordReset);
 
-        const BACKEND_ADDRESS = 'http://54.198.2.94:80';
+        const BACKEND_ADDRESS = 'http://www.expendease.work.gd';
         document.getElementsByTagName('a')[0].href = `${BACKEND_ADDRESS}/home.html`;
 
         async function passwordReset(e){
